tests/fixtures/valid/hello.moss
fn main
    output "hello, world"
