tests/fixtures/invalid/undefined_interpolation_name.moss
fn main
    output "hello, {name}"
